--- a/projekt2vs15.vcxproj
+++ b/projekt2vs15.vcxproj
@@ -105,6 +105,9 @@ copy /y "$(ProjectDir)*.bmp" $(OutDir)"</Command>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="map1.map" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
